--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <nav >
-        <h2>ARUNPRAKASH</h2>
-        <ul>
+    <nav class="navbar">
+        <h2 class="heading">ARUNPRAKASH</h2>
+        <ul class="content">
             <li>Home</li>
             <li>portfolio</li>
             <li>Contact</li>
         </ul>
     </nav>
-    <heaer>
-        <div>
-            image
-
+    <header class="container-left">
+        <div class="images">
+            <img src="./images/1.jpg" alt="person">
+            
         </div>
-        <div>
-            <div>ArunPrakash</div>
+        <div class="container-right">
+            <div >ArunPrakash</div>
             <div>Web Developer</div>
             <div>Im Working on JavaScript and React Developer</div>
-            <ul>
+            <ul class="socialmedia-links">
                 <li>fb</li>
                 <li>insta</li>
                 <li>linkedin</li>
                 <li>twitter</li>
             </ul>
         </div>
-    </heaer>
+    </header>
     
 </body>
 </html>
