--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CssFlexbox</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
@@ -26,10 +27,10 @@
             <div>Web Developer</div>
             <div>Im Working on JavaScript and React Developer</div>
             <ul class="socialmedia-links">
-                <li>fb</li>
-                <li>insta</li>
-                <li>linkedin</li>
-                <li>twitter</li>
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+                <li><i class="fa-brands fa-square-instagram"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
+                <li><i class="fa-brands fa-square-twitter"></i></li>
             </ul>
         </div>
     </header>
