--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             
         </div>
         <div class="container-right">
-            <div >ArunPrakash</div>
-            <div>Web Developer</div>
-            <div>Im Working on JavaScript and React Developer</div>
+            <div class="message">ArunPrakash</div>
+            <div class="message">Web Developer</div>
+            <div class="message">Im Working on JavaScript and React Developer</div>
             <ul class="socialmedia-links">
                 <li><i class="fa-brands fa-facebook-f"></i></li>
                 <li><i class="fa-brands fa-square-instagram"></i></li>
